# scp_rdma

./: README.md
rdma_trans_src/: rdma_resources.h
rdma_trans_src/rdma_cdc/: rdma_cdc.c  rdma_cdc.h
rdma_trans_src/rdma_socket/: .rdma_trans.c.swp  rdma_trans.c  rdma_trans.h
scp_rdma/: .scp_rdma_receiver.c.swp  README.md  install.sh  meson.build  scp_rdma.h  scp_rdma_main.c  scp_rdma_protocol.h  scp_rdma_receiver.c  scp_rdma_sender.c
